--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-﻿<!-- index.html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -30,16 +29,17 @@
 
     
         <nav class="navbar">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="navbar-header col-md-4 col-sm-6 col-xs-12">
                     <div class="navbar-brand col-md-12 col-sm-12 col-xs-10" >
-                        <a href="#/">Angular sample</a>
-                        <p class="col-md-12 col-sm-12 col-xs-12">adfsgh</p>
+                        <a href="#/">Srikanth Goud</a>
+                        <p class="col-md-12 col-sm-12 col-xs-12">Software Developer</p>
                     </div>
                     
                     <div class="col-xs-2">
                         <button type="button" class="navbar-toggle  collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                             <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -52,10 +52,10 @@
                         <ul class="noname navbar-nav">
                             <li  class="active"><a  href="#"><i class="fa fa-home"></i> Home</a></li>
                             <li class="dropdown">
-                                <a  class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-laptop"></i>Dropdown <span class="caret"></span></a>
+                                <a  class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-laptop"></i>Projects<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#projects"> One</a></li>
-                                    <li><a href="#projects"> Two</a></li>
+                                    <li><a href="#projects"> Electronics</a></li>
+                                    <li><a href="#projects"> Computer Science</a></li>
                                 </ul>
                             </li>
                             <li ><a href=" #resume"><i class="fa fa-shield"></i>resume</a></li>
