--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
                 <ul class="nav navbar-nav">
                     <li class="active"><a class="entypo-home" href="#">Home</a></li>
-                    <li><a class="entypo-user" href="#">Resume</a></li>
+                    <li><a class="entypo-user" href="#/resume">Resume</a></li>
 
                     <li class="dropdown">
                         <a class="dropdown-toggle  entypo-paper-plane" data-toggle="dropdown">
@@ -57,7 +57,7 @@
                         </ul>
 
                     </li>
-                    <li><a class="entypo-mail" href="#">Contact</a></li>
+                    <li><a class="entypo-mail" href="#/contact">Contact</a></li>
                 </ul>
             </div>
         </div>
