--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="./CustomScripts/script.js"></script>
 </head>
 <body>
-    <nav class="navbar" role="navigation">
+    <nav class="navbar" style="margin-top:-20px" role="navigation">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle"
@@ -41,7 +41,7 @@
 
                 <ul class="nav navbar-nav">
                     <li class="active"><a class="entypo-home" href="#">Home</a></li>
-                    <li><a class="entypo-user" href="#/resume">Resume</a></li>
+                    
 
                     <li class="dropdown">
                         <a class="dropdown-toggle  entypo-paper-plane" data-toggle="dropdown">
@@ -57,6 +57,7 @@
                         </ul>
 
                     </li>
+                    <li><a class="entypo-user" href="#/resume">Resume</a></li>
                     <li><a class="entypo-mail" href="#/contact">Contact</a></li>
                 </ul>
             </div>
