--- a/home.html
+++ b/home.html
@@ -19,5 +19,18 @@
     .slide_image {
     width:100%;
     overflow:inherit;
+    }  
+    .display-image {
+        align-content:center;
+        margin-top:20px;
+        margin-bottom:20px;
+        height:300px;
+        width:300px;
+        border-radius: 50%;
+    }
+    .home-content {
+    background-color:white !important;
+    margin-top:20px;
+    
     }
 </style>
