--- a/home.html
+++ b/home.html
@@ -7,7 +7,13 @@
 
             </div>
         </div>
-    
+    <carousel interval="myInterval">
+        <slide ng-repeat="slide in slides" active="slide.active">
+            <img ng-src="{{slide.image}}" class="slide_image">
+            <div class="carousel-caption">               
+            </div>
+        </slide>
+    </carousel>
 
 <style>
     .slide_image {
