--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
  <div class="home-content col-md-12 col-lg-12 col-xs-12 col-sm-12">
             <div class="col-md-6 col-lg-6 col-sm-6 col-sm-12">
-                <img src="/Content/Chrysanthemum.jpg" class="display-image" />
+                <img src="/Content/homeImage.jpg" class="display-image" />
             </div>
             <div class="col-md-6 col-lg-6 col-sm-6 col-sm-12">
                 <h2>A bit about Me..</h2>
