--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 
             </div>
         </div>
-        <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+        <div style="margin-top:20px;" class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
     <carousel interval="myInterval">
         <slide ng-repeat="slide in slides" active="slide.active">
             <img ng-src="{{slide.image}}" class="slide_image">
