--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
         align-content:center;
         margin-top:20px;
         margin-bottom:20px;
-        height:300px;
+        width:90%;
         border-radius: 50%;
     }
     .home-content {
