--- a/resume.html
+++ b/resume.html
@@ -1,9 +1,9 @@
 
 <div class="container">
-    <div class="row">
+    <div>
 
         <section class="col col-xs-12 col-sm-7 col-md-7 section">
-            <div class="row">
+            <div>
                 <div class="section-wrapper z-depth-1">
                     <div class="section-icon col col-xs-4 col-sm-2 col-md-2 ">
                         <i class="fa fa-suitcase"></i>
@@ -47,12 +47,14 @@ C language.
                         <div class="custom-content-wrapper wow fadeIn a2 animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">
                             <h3>Under Graduate Degree <span>@KMIT , Jntu-University</span></h3>
                             <span>June 2011 - May 2015 </span>
-                            <p></p>
+                            <p>With majors in Electronics and Communication</p>
                         </div>
                         <div class="custom-content-wrapper wow fadeIn a3 animated" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeIn;">
                             <h3>+2<span>@Narayana</span></h3>
                             <span>Jun 2009 - May 2011 </span>
-                            <p> </p>
+                            <p>  
+                                With majors in MPC
+                            </p>
                         </div>
                         
                     </div>
@@ -76,9 +78,9 @@ C language.
             </div>
         </section>
         <aside class="col-md-5 col-sm-5 col-xs-12 sidebar z-depth-1" id="sidebar">
-            <div class="row">
+            <div>
                 <div class="col col-sm-12 col-md-12 col-xs-12 sort-info sidebar-item">
-                    <div class="row">
+                    <div>
                         <div class="col  col-sm-2 col-md-2 col-xs-4 icon">                           
                             <i class="fa fa-user"></i>
                         </div>
@@ -92,9 +94,9 @@ C language.
                         </div>
                     </div>
                 </div>
-               <div class="row">
+               <div >
                 <div class="col col-sm-12 col-md-12 col-xs-12  mobile sidebar-item">
-                    <div class="row">                                
+                    <div >                                
                                 <div class="col col-sm-2 col-md-2 col-xs-4 icon">
                                     <i class="fa fa-phone"></i> <!-- icon -->
                                 </div>                                
@@ -110,7 +112,7 @@ C language.
                             </div></div>
                 <!--  EMAIL -->
                 <div class="col col-sm-12 col-md-12 col-xs-12 email sidebar-item ">
-                    <div class="row">
+                    <div >
                         <div class="col col-sm-2 col-md-2 col-xs-4 icon">
                             <i class="fa fa-envelope"></i> <!-- icon -->
                         </div>
@@ -127,7 +129,7 @@ C language.
                 </div>
                 <!-- ADDRESS  -->
                 <div class="col col-sm-12 col-md-12 col-xs-12  address sidebar-item ">
-                    <div class="row">
+                    <div>
                         <div class="col col-sm-2 col-md-2 col-xs-4 icon">
                             <i class="fa fa-home"></i> <!-- icon -->
                         </div>
@@ -147,7 +149,7 @@ C language.
                 </div>
                 <!-- SKILLS -->
                 <div class="col col-sm-12 col-md-12 col-xs-12  skills sidebar-item">
-                    <div class="row">
+                    <div>
                         <div class="col col-sm-2 col-md-2 col-xs-4 icon">
                             <i class="fa fa-calendar-o"></i> <!-- icon -->
                         </div>
