--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
             <div style="text-align:right" class="col-md-6 social col-xs-8 col-xl-6">
 
-                <ul style="display:inline">
+                <ul class="inlineText">
                     <li><a class="entypo-facebook" href="#"></a></li>
                     <li><a class="entypo-linkedin" href="#"></a></li>
                     <li><a class="entypo-twitter" href="#"></a></li>
