--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,14 @@
 ﻿
 <div class="container">
-    <div class="col-md-4 col-sm-4 col-xs-12">
+    <div class="col-md-6 col-sm-6 col-xs-12">
+<form>
+    
+</form>
+    </div>
+    <div class="col-md-6 col-sm-6 col-xs-12">
 
     </div>
-    <div class="col-md-8 col-sm-8 col-xs-12">
+    <div class="col-md-12 col-sm-12 col-xs-12">
         <ui-gmap-google-map center="map.center"
                             zoom="map.zoom"
                             control="map.control">
