--- a/resume.html
+++ b/resume.html
@@ -206,6 +206,10 @@ C language.
                             <div class="progress">
                                 <div class="determinate" style="width: 40%;"><i class="fa fa-circle"></i></div>
                             </div>
+                             <span>Angular JS</span>
+                            <div class="progress">
+                                <div class="determinate" style="width: 70%;"><i class="fa fa-circle"></i></div>
+                            </div>
                         </div>
                     </div>
                 </div>
