--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,40 @@
 ﻿
 <div class="container">
     <div class="col-md-6 col-sm-6 col-xs-12">
-<form>
+
+  <form class="form-horizontal" role="form" >
+      <h2>Contact</h2>
+<div class="form-group">
+      <label class="control-label col-sm-2" for="Name">Name:</label>
+      <div class="col-sm-10">          
+        <input type="password" class="form-control" id="Name" placeholder="Enter your name">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="email">Email:</label>
+      <div class="col-sm-10">
+        <input type="email" class="form-control" id="email" placeholder="Enter email">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="subject">subject:</label>
+      <div class="col-sm-10">          
+        <input type="text" class="form-control" id="subject" placeholder="Enter subject">
+      </div>
+    </div>
+     <div class="form-group">
+      <label class="control-label col-sm-2" for="message">Message:</label>
+      <div class="col-sm-10">          
+        <textarea rows="4" class="form-control" id="message" placeholder="Enter message"></textarea>
+      </div>
+    </div>
     
-</form>
+    <div class="form-group">        
+      <div class="col-sm-offset-2 col-sm-10">
+        <button type="submit" class="btn btn-default">Send</button>
+      </div>
+    </div>
+  </form>
     </div>
     <div class="col-md-6 col-sm-6 col-xs-12">
 
