--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="col-md-6 col-sm-6 col-xs-12">
 
-  <form class="form-horizontal" role="form" >
+  <form class="form-horizontal" role="form" action="MAILTO:someone@example.com" method="post" enctype="text/plain">
       <h2>Contact</h2>
 <div class="form-group">
       <label class="control-label col-sm-2" for="Name">Name:</label>
