--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-﻿
+
 <div class="container">
     <div class="col-md-6 col-sm-6 col-xs-12">
 
@@ -41,7 +41,7 @@
     </div>
     <div class="col-md-12 col-sm-12 col-xs-12">
         <ui-gmap-google-map center="map.center"
-                            zoom="map.zoom"
+                            zoom=12
                             control="map.control">
         </ui-gmap-google-map>
     </div>
