--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="./Scripts/jquery-2.2.0.js"></script>
     <script src="./Scripts/bootstrap.js"></script>
 
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.0.1/lodash.js" type="text/javascript"></script>
+    <script src="./Scripts/lodash.js" type="text/javascript"></script>
     <script src="Scripts/SimpleLogger.js"></script>
     <script src="Scripts/AngularMap.js"></script>
 
