--- a/contact.html
+++ b/contact.html
@@ -40,15 +40,12 @@
 
     </div>
     <div class="col-md-12 col-sm-12 col-xs-12">
-        <ui-gmap-google-map center="map.center"
-                            zoom=12
-                            control="map.control">
-        </ui-gmap-google-map>
+       <img class="location" src="/Content/location.JPG" class="display-image" />
     </div>
 </div>
 
 <style>
-    .angular-google-map-container {
+    .location {
         width: 100%;
         height: 400px;
     }
