--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,60 @@
     </div>
     <div class="col-md-6 col-sm-6 col-xs-12">
 
+<div class="col col-sm-12 col-md-12 col-xs-12  address sidebar-item ">
+    <div>
+        <div class="col col-sm-2 col-md-2 col-xs-2 icon">
+            <i class="fa fa-home"></i> 
+        </div>
+        <div class="col col-sm-10 col-md-10 col-xs-10 info wow fadeIn a4 animated" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;">
+            <div class="section-item-details">
+                <div class="address-details">
+                    
+                    <h4>
+                        Saroornagar <span></span><br>
+                        Hyderabad, Telangana.<br>
+                        <span>India</span>
+                    </h4>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="col col-sm-12 col-md-12 col-xs-12  mobile sidebar-item">
+    <div>
+        <div class="col col-sm-2 col-md-2 col-xs-2 icon">
+            <i class="fa fa-phone"></i> 
+        </div>
+        <div class="col col-sm-10 col-md-10 col-xs-10 info wow fadeIn a2 animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">
+            <div class="section-item-details">
+                <div class="personal">
+                    <h4><a href="">91-86888-22588</a></h4> <!-- Number -->
+                    <span>mobile</span>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div style="background-color:white;" class="col col-sm-12 col-md-12 col-xs-12 email sidebar-item ">
+    <div>
+        <div class="col col-sm-2 col-md-2 col-xs-2 icon">
+            <i class="fa fa-envelope"></i> 
+        </div>
+        <div class=" col col-sm-10 col-md-10 col-xs-10 info wow fadeIn a3 animated" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeIn;">
+            <div class="section-item-details">
+                <div class="personal">
+                    <h4><a href="mailto:srikanthp.1453@gmail.com">srikanthp.1453@gmail.com</a></h4> <!-- Email -->
+                    <span>personal</span>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+
     </div>
     <div class="col-md-12 col-sm-12 col-xs-12">
        <img class="location" src="/Content/location.JPG" class="display-image" />
