--- a/contact.html
+++ b/contact.html
@@ -36,9 +36,9 @@
     </div>
   </form>
     </div>
-    <div class="col-md-6 col-sm-6 col-xs-12">
-
-<div class="col col-sm-12 col-md-12 col-xs-12  address sidebar-item ">
+    <div style="background-color:white;" class="col-md-6 col-sm-6 col-xs-12">
+<h2>Address:</h2>
+<div style="color:black" class="col col-sm-12 col-md-12 col-xs-12  address sidebar-item ">
     <div>
         <div class="col col-sm-2 col-md-2 col-xs-2 icon">
             <i class="fa fa-home"></i> 
@@ -75,7 +75,7 @@
     </div>
 </div>
 
-<div style="background-color:white;" class="col col-sm-12 col-md-12 col-xs-12 email sidebar-item ">
+<div  class="col col-sm-12 col-md-12 col-xs-12 email sidebar-item ">
     <div>
         <div class="col col-sm-2 col-md-2 col-xs-2 icon">
             <i class="fa fa-envelope"></i> 
