--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 
-<div class="container">
-    <div class="col-md-6 col-sm-6 col-xs-12">
+
+    <div style="background-color:white;" class="col-md-6 col-sm-6 col-xs-12">
 
   <form class="form-horizontal" role="form" action="MAILTO:someone@example.com" method="post" enctype="text/plain">
       <h2>Contact</h2>
@@ -96,7 +96,7 @@
     <div class="col-md-12 col-sm-12 col-xs-12">
        <img class="location" src="/Content/location.JPG" class="display-image" />
     </div>
-</div>
+
 
 <style>
     .location {
