--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 
 
-    <div style="background-color:white;" class="col-md-6 col-sm-6 col-xs-12">
+    <div style="background-color:white; margin-left:2.5px; margin-right:2.5px; margin-top:2.5px; margin-bottom:2.5px" class="col-md-6 col-sm-6 col-xs-12">
 
   <form class="form-horizontal" role="form" action="MAILTO:someone@example.com" method="post" enctype="text/plain">
       <h2>Contact</h2>
@@ -36,7 +36,7 @@
     </div>
   </form>
     </div>
-    <div style="background-color:white;" class="col-md-6 col-sm-6 col-xs-12">
+    <div style="background-color:white; margin-left:2.5px; margin-right:2.5px; margin-top:2.5px; margin-bottom:2.5px ;padding-top:10px; padding-bottom:10px;" class="col-md-6 col-sm-6 col-xs-12">
 <h2>Address:</h2>
 <div style="color:black" class="col col-sm-12 col-md-12 col-xs-12  address sidebar-item ">
     <div>
