--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 
 
-    <div style="background-color:white; margin-left:2.5px; margin-right:2.5px; margin-top:2.5px; margin-bottom:2.5px" class="col-md-6 col-sm-6 col-xs-12">
-
+    <div  class="col-md-6 col-sm-6 col-xs-12">
+<div style="background-color:white; margin-left:2.5px; margin-right:2.5px; margin-top:2.5px; margin-bottom:2.5px">
   <form class="form-horizontal" role="form" action="MAILTO:someone@example.com" method="post" enctype="text/plain">
       <h2>Contact</h2>
 <div class="form-group">
@@ -35,8 +35,10 @@
       </div>
     </div>
   </form>
+  </div>
     </div>
-    <div style="background-color:white; margin-left:2.5px; margin-right:2.5px; margin-top:2.5px; margin-bottom:2.5px ;padding-top:10px; padding-bottom:10px;" class="col-md-6 col-sm-6 col-xs-12">
+    <div class="col-md-6 col-sm-6 col-xs-12">
+<div style="background-color:white; margin-left:2.5px; margin-right:2.5px; margin-top:2.5px; margin-bottom:2.5px ;padding-top:10px; padding-bottom:10px;">
 <h2>Address:</h2>
 <div style="color:black" class="col col-sm-12 col-md-12 col-xs-12  address sidebar-item ">
     <div>
@@ -57,8 +59,8 @@
         </div>
     </div>
 </div>
-
-<div class="col col-sm-12 col-md-12 col-xs-12  mobile sidebar-item">
+</div>
+<div class="col col-sm-12 col-md-12 col-xs-12 sidebar-item">
     <div>
         <div class="col col-sm-2 col-md-2 col-xs-2 icon">
             <i class="fa fa-phone"></i> 
@@ -66,7 +68,7 @@
         <div class="col col-sm-10 col-md-10 col-xs-10 info wow fadeIn a2 animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">
             <div class="section-item-details">
                 <div class="personal">
-                    <h4><a href="">91-86888-22588</a></h4> <!-- Number -->
+                    <h4><a href="">91-86888-22588</a></h4>
                     <span>mobile</span>
                 </div>
 
@@ -75,7 +77,7 @@
     </div>
 </div>
 
-<div  class="col col-sm-12 col-md-12 col-xs-12 email sidebar-item ">
+<div  class="col col-sm-12 col-md-12 col-xs-12  sidebar-item ">
     <div>
         <div class="col col-sm-2 col-md-2 col-xs-2 icon">
             <i class="fa fa-envelope"></i> 
