--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
         </div>
     </div>
 </div>
-<div class="col-md-6 col-sm-6 col-xs-12" style="color:black">
+<div class="col-md-6 col-sm-6 col-xs-12" style="color:black; background-color:white">
     <div style="background-color:white; margin-left:2.5px; margin-right:2.5px; margin-top:2.5px; margin-bottom:2.5px ;padding-top:10px; padding-bottom:10px;">
         <div>
             <h2>Address:</h2>
@@ -70,7 +70,7 @@
                     <div class="col col-sm-10 col-md-10 col-xs-10 info wow fadeIn a2 animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">
                         <div class="section-item-details">
                             <div class="personal">
-                                <h4><a href="">91-86888-22588</a></h4>
+                                <h4 style="color:black"><a href="">91-86888-22588</a></h4>
                                 <span>mobile</span>
                             </div>
                         </div>
@@ -85,7 +85,7 @@
                     <div class=" col col-sm-10 col-md-10 col-xs-10 info wow fadeIn a3 animated" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeIn;">
                         <div class="section-item-details">
                             <div class="personal">
-                                <h4><a href="mailto:srikanthp.1453@gmail.com">srikanthp.1453@gmail.com</a></h4> <!-- Email -->
+                                <h4 style=""><a href="mailto:srikanthp.1453@gmail.com">srikanthp.1453@gmail.com</a></h4> <!-- Email -->
                                 <span>personal</span>
                             </div>
                         </div>
