--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
                     <div class=" col col-sm-10 col-md-10 col-xs-10 info wow fadeIn a3 animated" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeIn;">
                         <div class="section-item-details">
                             <div class="personal">
-                                <h4 style=""><a href="mailto:srikanthp.1453@gmail.com">srikanthp.1453@gmail.com</a></h4> <!-- Email -->
+                                <h4 style="color:black"><a href="mailto:srikanthp.1453@gmail.com">srikanthp.1453@gmail.com</a></h4> <!-- Email -->
                                 <span>personal</span>
                             </div>
                         </div>
