--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 
 <div class="col-md-6 col-sm-6 col-xs-12">
     <div style="background-color:white; margin-left:2.5px; margin-right:2.5px; margin-top:2.5px; margin-bottom:2.5px">
-        <div>
+        <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
             <form class="form-horizontal" role="form" action="MAILTO:someone@example.com" method="post" enctype="text/plain">
                 <h2>Contact</h2>
                 <div class="form-group">
@@ -70,7 +70,7 @@
                     <div class="col col-sm-10 col-md-10 col-xs-10 info wow fadeIn a2 animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">
                         <div class="section-item-details">
                             <div class="personal">
-                                <h4 style="color:black"><a href="">91-86888-22588</a></h4>
+                                <h4 ><a style="color:black" href="">+91-86888-22588</a></h4>
                                 <span>mobile</span>
                             </div>
                         </div>
@@ -85,7 +85,7 @@
                     <div class=" col col-sm-10 col-md-10 col-xs-10 info wow fadeIn a3 animated" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeIn;">
                         <div class="section-item-details">
                             <div class="personal">
-                                <h4 style="color:black"><a href="mailto:srikanthp.1453@gmail.com">srikanthp.1453@gmail.com</a></h4> <!-- Email -->
+                                <h4 ><a style="color:black" href="mailto:srikanthp.1453@gmail.com">srikanthp.1453@gmail.com</a></h4> <!-- Email -->
                                 <span>personal</span>
                             </div>
                         </div>
