--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 
 <div class="col-md-6 col-sm-6 col-xs-12">
-    <div style="background-color:white; margin-left:2.5px; margin-right:2.5px; margin-top:2.5px; margin-bottom:2.5px">
+    <div style=" margin-left:2.5px; margin-right:2.5px; margin-top:2.5px; margin-bottom:2.5px">
         <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12" style="background-color:white;">
             <form class="form-horizontal" role="form" action="MAILTO:someone@example.com" method="post" enctype="text/plain">
                 <h2>Contact</h2>
