--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 
 <div class="col-md-6 col-sm-6 col-xs-12">
     <div style=" margin-left:2.5px; margin-right:2.5px; margin-top:2.5px; margin-bottom:2.5px">
-        <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12" style="background-color:white;">
+        <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12" style="background-color:white; margin-bottom:20px">
             <form class="form-horizontal" role="form" action="MAILTO:someone@example.com" method="post" enctype="text/plain">
                 <h2>Contact</h2>
                 <div class="form-group">
@@ -38,7 +38,7 @@
         </div>
     </div>
 </div>
-<div class="col-md-6 col-sm-6 col-xs-12" style="color:black; background-color:white">
+<div class="col-md-6 col-sm-6 col-xs-12" style="color:black; background-color:white; padding-bottom:40px; padding-top:20px; margin-bottom:30px;margin-top:5px>
     <div style="background-color:white; margin-left:2.5px; margin-right:2.5px; margin-top:2.5px; margin-bottom:2.5px ;padding-top:10px; padding-bottom:10px;">
         <div>
             <h2>Address:</h2>
