--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                         </a>
 
                         <ul class="dropdown-menu">
-                            <li><a href="#">Electronics</a></li>
+                            <li><a href="#/projects">Electronics</a></li>
 
                             <li class="divider"></li>
-                            <li><a href="#">Computer science</a></li>
+                            <li><a href="#projects">Computer science</a></li>
                         </ul>
 
                     </li>
