--- a/home.html
+++ b/home.html
@@ -1,10 +1,12 @@
- <div class="home-content col-md-12 col-lg-12 col-xs-12 col-sm-12">
+ <div style="margin-top:20px;" class="col-md-12 col-lg-12 col-xs-12 col-sm-12">
             <div class="col-md-6 col-lg-6 col-sm-6 col-sm-12">
-                <img src="/Content/20150425_155203.jpg" class="display-image" />
+             <div style="margin-top:2.5px;margin-right:2.5px;margin-bottom:2.5px;margin-left:2.5px;" class="home-content">
+                <img src="/Content/20150425_155203.jpg" class="display-image" /></div>
             </div>
             <div class="col-md-6 col-lg-6 col-sm-6 col-sm-12">
+             <div style="background-color:#5da4d9;color:white; margin-top:2.5px;margin-right:2.5px;margin-bottom:2.5px;margin-left:2.5px;">
                 <h2>A bit about Me..</h2>
-
+</div>
             </div>
         </div>
         <div style="margin-top:20px;" class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
@@ -30,7 +32,7 @@
     }
     .home-content {
     background-color:white !important;
-    margin-top:20px;
+    
     
     }
 </style>
