--- a/home.html
+++ b/home.html
@@ -6,6 +6,12 @@
             <div class="col-md-6 col-lg-6 col-sm-6 col-sm-12">
              <div style="background-color:#5da4d9;color:white; margin-top:2.5px;margin-right:2.5px;margin-bottom:2.5px;margin-left:2.5px;">
                 <h2>A bit about Me..</h2>
+                <p>Hello, This is Srikanth from Hyderabad, India. Interested in both Electronics and Computer Science.</p>
+                <p>My passion towards technology pushes me forward in learning and working with edge-cuttiing technologies</p>
+                <p>Want to know more about me?</p>
+                <a href="#/resume" >My Resume</a>
+                <a href="#/projects">My Projects</a>
+                <a href="#/contact">Contact me</a>
 </div>
             </div>
         </div>
