--- a/home.html
+++ b/home.html
@@ -9,9 +9,9 @@
                 <p>Hello, This is Srikanth from Hyderabad, India. Interested in both Electronics and Computer Science.</p>
                 <p>My passion towards technology pushes me forward in learning and working with edge-cuttiing technologies</p>
                 <p>Want to know more about me?</p>
-                <a href="#/resume" >My Resume</a>
-                <a href="#/projects">My Projects</a>
-                <a href="#/contact">Contact me</a>
+                <a class="btn-success" href="#/resume" >My Resume</a>
+                <a class="btn-success" href="#/projects">My Projects</a>
+                <a class="btn-success" href="#/contact">Contact me</a>
 </div>
             </div>
         </div>
