--- a/home.html
+++ b/home.html
@@ -30,6 +30,8 @@
     overflow:inherit;
     }  
     .display-image {
+     margin-left:5%;
+     margin-right:5%;
         align-content:center;
         margin-top:20px;
         margin-bottom:20px;
